style: fix stars breaking on small devices

--- a/src/app/home/damage/damage.component.scss
+++ b/src/app/home/damage/damage.component.scss
@@ -15,6 +15,7 @@ $color: mat-color($primary);
 
     span {
       font-weight: bold;
+      font-size: 12px;
     }
 
     span:first-of-type {
