--- a/src/app/home/luck/luck.component.scss
+++ b/src/app/home/luck/luck.component.scss
@@ -7,6 +7,7 @@
 
     span {
       font-weight: bold;
+      font-size: 12px;
     }
 
     @media all and (min-width: 960px) {
